--- a/car_home.css
+++ b/car_home.css
@@ -1,102 +1,110 @@
-            header{
-                padding-top : 1%;
-                padding-left : 1%; 
-            }
-            .center{
-                text-align: center;
-            }
-            .logo{
-               
-                padding-left: 1%;
-            }
-            .leftcontainer{
-                padding-top: 1%;
-                padding-left: 1%;
-            }
-            .centercontainer{
-                padding-left: 1%;
-                padding-right: 1%;
-            }
-            .rightcontainer{
-                padding-top: 1%;
-                padding-right: 1%;
-            }
-            footer{
-                padding-top : 3%;
-                padding-left : 3%; 
-                font-size: 12px;
-            }
-            .smalllogo{
-                padding-left: 1%;
-                width: 9%;
-                height: 9%;
-            }
-            .concept{
-                font-weight: 900;
-                font-size: 18px;
-                color: red;
-            }
-            .navbar {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 1% 1%;
-    text-decoration: none;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    font-size: 16px;    
-    border: none;
-    outline: none;
-    color: white;
-    padding: 1% 1%;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: grey;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: white;
-    padding: 1% 1%;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-            @media screen and (max-width: 768px) {
+                header{
+                    padding-top : 1%;
+                    padding-left : 1%; 
+                }
+                .center{
+                    text-align: center;
+                }
+                .logo{
+                
+                    padding-left: 1%;
+                }
+                .leftcontainer{
+                    padding-top: 1%;
+                    padding-left: 1%;
+                }
+                .centercontainer{
+                    padding-left: 1%;
+                    padding-right: 1%;
+                }
+                .rightcontainer{
+                    padding-top: 1%;
+                    padding-right: 1%;
+                }
+                footer{
+                    padding-top : 3%;
+                    padding-left : 3%; 
+                    font-size: 12px;
+                }
                 .smalllogo{
-                padding-left: 1%;
-                width: 20%;
-                height: 20%;
-            }
-            }
+                    padding-left: 1%;
+                    width: 9%;
+                    height: 9%;
+                }
+                .concept{
+                    font-weight: 900;
+                    font-size: 18px;
+                    color: red;
+                }
+                .opacity{
+                    -webkit-filter: opacity(50%);
+                    filter: opacity(50%);
+                }
+                .drop-shadow{
+                    -webkit-filter: drop-shadow(8px 8px 10px gray); 
+                    filter: drop-shadow(8px 8px 10px gray);
+                }
+                .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 1% 1%;
+        text-decoration: none;
+    }
+
+    .dropdown {
+        float: left;
+        overflow: hidden;
+    }
+
+    .dropdown .dropbtn {
+        font-size: 16px;    
+        border: none;
+        outline: none;
+        color: white;
+        padding: 1% 1%;
+        background-color: inherit;
+        font-family: inherit;
+        margin: 0;
+    }
+
+    .navbar a:hover, .dropdown:hover .dropbtn {
+        background-color: grey;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: black;
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        float: none;
+        color: white;
+        padding: 1% 1%;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+                @media screen and (max-width: 768px) {
+                    .smalllogo{
+                    padding-left: 1%;
+                    width: 20%;
+                    height: 20%;
+                }
+                }
